# actix-web-sample

./: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yml
docker/db/: init.sql
migrations/: 20230826053836_init.up.sql
seeding/: init.sql
src/: main.rs
src/models/: user.rs
swagger/: openapi.yaml
