[package]
name = "actix-web-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" # actix-web
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
chrono = { version = "0.4.23", features = ["serde"] }
